# hammerdb-scale

./: .gitignore  ADDING-DATABASES.md  CHANGELOG.md  CONTRIBUTING.md  Chart.yaml  Dockerfile.oracle  LICENSE  README.md  aggregate-results.sh  deploy-test.sh  dockerfile  entrypoint.sh  pyproject.toml  values-examples.yaml  values.yaml
.github/workflows/: ci.yml  publish.yml
docs/: ADDING-DATABASES.md  CONFIGURATION.md  CONTAINER-IMAGES.md  MIGRATION.md  SECURITY.md  USAGE-GUIDE.md
docs/databases/: ORACLE-SETUP.md
examples/: mssql-tprocc.yaml  mssql-tproch.yaml  oracle-tprocc.yaml  oracle-tproch.yaml
scripts/: collect_pure_metrics.py
scripts/mssql/: load_test_tprocc.tcl
scripts/oracle/: build_schema_tprocc.tcl  parse_output_tprocc.tcl
src/hammerdb_scale/: __main__.py  cli.py  constants.py  output.py  wizard.py
src/hammerdb_scale/chart/: .helmignore  Chart.yaml  values.yaml
src/hammerdb_scale/chart/scripts/: collect_pure_metrics.py
src/hammerdb_scale/chart/scripts/mssql/: build_schema_tprocc.tcl  build_schema_tproch.tcl  load_test_tprocc.tcl  load_test_tproch.tcl  parse_output_tproch.tcl
src/hammerdb_scale/chart/scripts/oracle/: build_schema_tproch.tcl  load_test_tprocc.tcl  load_test_tproch.tcl  parse_output_tproch.tcl
src/hammerdb_scale/chart/templates/: _helpers.tpl  configmap-mssql.yaml  configmap-oracle.yaml  job-hammerdb-worker.yaml
src/hammerdb_scale/clean/: database.py  mssql_drop.py  oracle_drop.py  resources.py
src/hammerdb_scale/config/: defaults.py  loader.py  schema.py
src/hammerdb_scale/helm/: deployer.py  values.py
src/hammerdb_scale/k8s/: jobs.py  naming.py
src/hammerdb_scale/reports/: generator.py
src/hammerdb_scale/results/: aggregator.py  parsers.py  storage.py
templates/: _helpers.tpl  configmap-mssql.yaml  job-hammerdb-worker.yaml
tests/: test_defaults.py  test_migration.py  test_naming.py  test_parsers.py  test_schema.py  test_values.py  test_wizard.py
tests/fixtures/: mssql_tprocc_log.txt  mssql_tproch_log.txt  oracle_tprocc_log.txt  oracle_tproch_log.txt  v1-oracle-config.yaml  v2-mssql-config.yaml  v2-oracle-config.yaml
