[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hammerdb-scale"
version = "2.0.1"
description = "CLI for orchestrating parallel HammerDB database benchmarks at scale on Kubernetes"
readme = {file = "README.md", content-type = "text/markdown"}
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Andrew Sillifant" },
    { name = "Anthony Nocentino" },
]
keywords = ["hammerdb", "benchmark", "tpc-c", "tpc-h", "database", "kubernetes", "performance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: System :: Benchmark",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "oracledb>=2.0.0",
    "pymssql>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.0",
    "mypy>=1.8.0",
]

[project.scripts]
hammerdb-scale = "hammerdb_scale.cli:app"

[project.urls]
Homepage = "https://github.com/PureStorage-OpenConnect/hammerdb-scale"
Repository = "https://github.com/PureStorage-OpenConnect/hammerdb-scale"
Documentation = "https://github.com/PureStorage-OpenConnect/hammerdb-scale/tree/main/docs"
Changelog = "https://github.com/PureStorage-OpenConnect/hammerdb-scale/blob/main/CHANGELOG.md"
Issues = "https://github.com/PureStorage-OpenConnect/hammerdb-scale/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hammerdb_scale"]

[tool.hatch.build.targets.sdist]
exclude = [
    "results/",
    "tests/",
    "*.yaml.bak",
    "values-*.yaml",
    "legacy/",
]
